# qbittorrent2mqtt

./: .gitignore  README.md  export-requirements.py  pyproject.toml  requirements.txt
qbittorrent2mqtt/: __init__.py  __main__.py  app.py  const.py  sensor.py
scripts/hooks/: pre-commit.py
