[project]
name = "qbittorrent2mqtt"
dynamic = ["version"]
description = "Grabs data from qBittorrent and exposes via MQTT. Uses Home Assistant discovery."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["x2mqtt", "requests>=2.33.1"]
license = "GPL-3.0"
license-files = ["LICENSE"]

[tool.uv.sources]
x2mqtt = { git = "https://github.com/acshef/x2mqtt.git" }
